--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-chartjs-2": "^2.7.3",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-select": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
